--- a/style.css
+++ b/style.css
@@ -92,9 +92,13 @@ hr {
   font-size: 200%;
   color: black;
   text-decoration: none;
-  top: 135px;
+  top: 129px;
   right: 1.7px;
   position: relative;
+}
+
+#Logos:hover {
+  color: white;
 }
 
 #Illustrations {
@@ -103,10 +107,15 @@ hr {
   font-size: 200%;
   color: black;
   text-decoration: none;
-  top: 134px;
+  top: 130px;
   right: 2px;
   position: relative;
 }
+
+#Illustrations:hover {
+  color: white;
+}
+
 
 #Affiches {
   position: relative;
@@ -114,14 +123,20 @@ hr {
   font-size: 200%;
   color: black;
   text-decoration: none;
-  top: 135px;
+  top: 129px;
   right: -1px;
   position: relative;
 
 }
 
+#Affiches:hover {
+  color: white;
+}
+
+
 .Footer {
-  border-bottom: solid 1px black;
+  border-bottom: 5px solid WHITE;
+  height: 10px;
 }
 
 @media (min-width: 768px) {
@@ -204,7 +219,7 @@ hr {
     font-size: 200%;
     color: black;
     text-decoration: none;
-    top: 139px;
+    top: 134px;
     right: 17px;
 
   }
@@ -220,7 +235,7 @@ hr {
    font-size: 200%;
    color: black;
    text-decoration: none;
-   top: 139px;
+   top: 134px;
    right: 12px;
  }
 
@@ -235,7 +250,7 @@ hr {
    font-size: 200%;
    color: black;
    text-decoration: none;
-   top: 139px;
+   top: 134px;
    right: 25px;
  }
 
