--- a/logo.css
+++ b/logo.css
@@ -8,7 +8,7 @@
 
 .Container-main {
   flex: 1;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .Header {
@@ -63,6 +63,8 @@ hr {
 
 ._1 {
   grid-area: _1;
+  position: relative;
+  top: 15%;
   background-image: url(asset/flotoju.jpg);
   background-size: 110%;
   background-repeat: no-repeat;
@@ -95,7 +97,7 @@ hr {
   opacity: 0.5;
 }
 
-Main-content {
+/*.Main-content {
   display: grid;
   grid-template-areas:
     '_1'
@@ -108,6 +110,17 @@ Main-content {
 
   padding-left: 0;
   list-style: none;
+}*/
+#carouselExampleControls {
+  position: relative;
+  top: 10vh;
+  left: 10%;
+  width: 80%;
+}
+
+#bio {
+  position: relative;
+  top:-50%;
 }
 
 @media (min-width: 768px) {
@@ -117,6 +130,43 @@ Main-content {
     top: 0;
     left: 9vh
   }
+
+  _1 {
+    grid-area: _1;
+    background-image: url(asset/flotoju.jpg);
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.5;
+
+    position: relative;
+    bottom: -60%;
+    right: -20%;
+    z-index: 1;
+  }
+  ._2 {
+    grid-area: _2;
+    background-image: url(asset/portrait-peinture.jpg);
+    background-size: 110%;
+    background-position: center;
+    opacity: 0.5;
+
+    position: relative;
+    z-index: 2;
+  }
+  ._3 {
+    grid-area: _3;
+    background-image: url(asset/place-des-vosges.jpg);
+    background-size: 100%;
+    background-position: center;
+    opacity: 0.5;
+
+    position: relative;
+    top: -60%;
+    left: -20%;
+    z-index: 3;
+  }
+
   hr {
     position: relative;
     top: 1px;
@@ -153,19 +203,9 @@ Main-content {
     text-decoration: none;
   }
 
-  .Main-bio {
+  #carouselExampleControls {
     position: relative;
-    left: -150px;
-    font-family:"lato Hairline", sans-serif;
-    font-size: 300%
+    top: 8vh;
+    left: 25%;
+    width: 50%;
   }
-
-  .Title {
-    display: flex;
-    justify-content: flex-start;
-    top: 15%;
-    padding-left: 2%;
-    font-family: "Lato light", sans-serif;
-    left: 10vh;
-  }
-}
